--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /treasury-securities-net-issuance-selectbox.py
 /treasury-securities-net-issuance-streamlit-all.py
 /treasury-securities-net-issuance-streamlit.py
+/archive
